--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/myappli?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetime
+spring.datasource.url = jdbc:mysql://localhost:3306/myAppli_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetime
 Code=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
